--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asgiref>=3.9.2",
     "flask>=3.1.2",
     "pymupdf>=1.26.4",
     "uvicorn>=0.37.0",
